[package]
name = "resize"
version = "0.7.5"
description = "Simple image resampling library in pure Rust."
authors = ["Kornel <kornel@geekhood.net>", "Kagami Hiiragi <kagami@genshiken.org>"]
categories = ["graphics", "multimedia::images"]
keywords = ["resize", "scale", "resample", "image", "graphics"]
documentation = "https://docs.rs/resize"
homepage = "https://github.com/PistonDevelopers/resize"
repository = "https://github.com/PistonDevelopers/resize.git"
license = "MIT"
readme = "README.md"
include = ["Cargo.toml", "README.md", "LICENSE", "src/*.rs"]
edition = "2021"
rust-version = "1.57"

[features]
default = ["rayon", "fp16"]
fp16 = ["half", "num-traits"]

[dev-dependencies]
png = "0.17.7"

[dependencies]
rgb = "0.8.36"
rayon = { version = "1.7.0", optional = true }
half = { version = "2.3.1", optional = true, features = ["num-traits"]}
num-traits = { version = "0.2.16", optional = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }
